# itty_bitty

./: .gitignore  BEADS_ANALYSIS.md  Cargo.toml  README.md
src/: main.rs
testdata/: README.md  README.md.bz2  README.tar
tests/: archive_formats.rs  bzip2_markers.rs  end_of_file.rs  macho_format.rs
tests/common/: mod.rs
